--- a/www/static/css/style.css
+++ b/www/static/css/style.css
@@ -1081,6 +1081,7 @@ main>#about-section>.section-content .about-item:nth-child(2n) p {
     border-radius: 8px;
     overflow: hidden;
     position: relative;
+    border: 2px solid var(--accent-2);
 }
 
 .animal-item .animal-item-image {
@@ -1119,7 +1120,6 @@ main>#about-section>.section-content .about-item:nth-child(2n) p {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent 50%);
     z-index: 2;
     transition: background-color 0.4s ease-out;
 }
@@ -1130,7 +1130,8 @@ main>#about-section>.section-content .about-item:nth-child(2n) p {
     left: 0;
     padding: 1rem;
     width: 100%;
-    color: var(--dark-text-foreground);
+    background-color: var(--light);
+    color: var(--dark);
     z-index: 3;
     transition: all 0.4s ease-out;
 }
@@ -1141,8 +1142,7 @@ main>#about-section>.section-content .about-item:nth-child(2n) p {
     font-size: 0.8rem;
 }
 
-.animals-section .animal-list .animal-item-content .animal-item-description,
-.animals-section .animal-list .animal-item-content .learn-more {
+.animals-section .animal-list .animal-item-content .animal-item-description {
     visibility: hidden;
     opacity: 0;
     max-height: 0;
@@ -1154,21 +1154,15 @@ main>#about-section>.section-content .about-item:nth-child(2n) p {
     background-color: rgba(255, 255, 250, 0.9); /* Sfondo chiaro per leggibilità */
 }
 
-.animals-section .animal-list .animal-item:hover .animal-item-image,
-.animals-section .animal-list .animal-item:focus-within .animal-item-image {
-    transform: scale(1.1);
-}
-
 .animals-section .animal-list .animal-item:hover .animal-item-content,
 .animals-section .animal-list .animal-item:focus-within .animal-item-content {
-    top: 0;
+    top: 0; /* Ora imposta top */
+    transition: all 0.4s ease-out;
     color: var(--light-accent-text-foreground);
 }
 
 .animals-section .animal-list .animal-item:hover .animal-item-description,
-.animals-section .animal-list .animal-item:focus-within .animal-item-description,
-.animals-section .animal-list .animal-item:hover .learn-more,
-.animals-section .animal-list .animal-item:focus-within .learn-more {
+.animals-section .animal-list .animal-item:focus-within .animal-item-description {
     visibility: visible;
     opacity: 1;
     max-height: 100px;
